@@ -1,3 +1,8 @@
+2007-01-02  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Report storage information 
+	  dynamically using the new API.
+
 2006-12-30  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c,ptp-bugs.h: Mark up MTP devices
